# gui_wx

./: CMakeLists.txt  ExitDialog.cpp  MainFrame.cpp  MyFrame4.cpp  README.md  main.cpp
include/: ExitDialog.h  MainFrame.h  MyFrame4.h
include/gui/: ExitDialog.h  MainFrame.h  MyTray.h
src/gui/: ExitDialog.cpp  MainFrame.cpp  MyTray.cpp
ui/: wx.fbp
